--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content=""> 
+    <!--
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	  <script src="/assets/bootstrap-editable.min.js"></script>
+   
+    -->
     <%= javascript_include_tag 'application' %>
+
+  <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+    
+    <!--
+  <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+  --> 
+
+    <script src="/assets/bootstrap.min.js"></script>  
+	  <script src="/assets/bootstrap-editable.min.js"></script>
 
     <link href="/assets/bootstrap.css" rel="stylesheet">
     <link href="/assets/jess.css" rel="stylesheet">
@@ -71,8 +83,6 @@
 	    </div>
 	  </div>
 
-    <script src="/assets/jquery.js"></script>
-    <script src="/assets/bootstrap.min.js"></script>
 
   </body>
 </html>
