fix jquery weirdness

--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -1,3 +1,5 @@
+<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+
 <style>
 body {
   padding-top: 100px; /* 60px to make the container go all the way to the bottom of the topbar */
