--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -41,6 +41,9 @@
 
         </span>
 
+        <a href="<%= my_faves_url %>"><img src="/assets/favescript3.png" width="73px" height="22px" class="pull-right"></a>
+
+
       </div>
     </div>
 
