--- a/app/views/sales/_sale_modal.html.erb
+++ b/app/views/sales/_sale_modal.html.erb
@@ -11,7 +11,9 @@
 
   <div class="modal-footer">
     <span class="row-fluid">
-      <a href="purchase.html" class="btn btn-success span4 pull-right">Buy</a>
+      <% if sale.user and sale.user.is_merchant %>
+      <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success span4 pull-right">Buy</a>
+      <% end %>
     </span>
   </div>
 </div>
