--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
    
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'bootstrap.min.js' %>
-    <%= javascript_include_tag 'boostrap-editable.min.js' %>
+    <%= javascript_include_tag 'bootstrap-editable.min.js' %>
 
     <%= stylesheet_link_tag 'bootstrap.css' %>
     <%= stylesheet_link_tag 'jess.css' %>
