transaction declined message

--- a/app/views/purchases/confirmation.html.erb
+++ b/app/views/purchases/confirmation.html.erb
@@ -12,7 +12,8 @@ body {
         <div class="signup-unit">
           <center><p><font size="6">Congratulations!</font></p> 
             <p><font size="5">We're holding your item are awaiting confirmation from the merchant. Your credit card will be charged once the sale is confirmed.</font></p>
-            <a href="index.html"><button class="btn-large btn-success">Back to Shopping</button></a></center>
+            <a href="<%= root_url %>"><button class="btn-large btn-success">Back to Shopping</button></a></center>
+          
         </div><!--end marketing -->		
       </div><!--end container -->
     </div>
