--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -9,29 +9,38 @@ body {
     <div class="row-fluid">
       <div class="span4">
         <div class="signup-unit">
+
+          <% if flash[:message] %>
+          <div class="alert alert-error"> 
+            <center>
+              <%= flash[:message] %>
+            </center>
+          </div>
+          <% end %>
+
           <fieldset>
             <form id='payment-form' action='<%= Braintree::TransparentRedirect.url %>' method='POST'>              
               <input type="hidden" name="tr_data" value="<%= @tr_data %>" />
 
               <legend>Preferred Payment
-              <button id="submitButton" onclick="$('#submitButton')[0].innerText='Processing...'; $('#submitButton')[0].disabled = true; $('#payment-form').submit(); return false;" type="submit" class="btn btn-success pull-right">Submit Payment</button></legend>
+                <button id="submitButton" onclick="$('#submitButton')[0].innerText='Processing...'; $('#submitButton')[0].disabled = true; $('#payment-form').submit(); return false;" type="submit" class="btn btn-success pull-right">Submit Payment</button></legend>
 
-              <input name="transaction[customer][first_name]" type="text" class="input-small" placeholder="First Name">
-              <input name="transaction[customer][last_name]" type="text" class="input-small" placeholder="Last Name">
+              <input name="transaction[customer][first_name]" type="text" class="input-small" placeholder="First Name" value="<%= params[:first_name] %>">
+              <input name="transaction[customer][last_name]" type="text" class="input-small" placeholder="Last Name" value="<%= params[:last_name] %>">
               <br>
               <input name="transaction[credit_card][number]"  autocomplete="off" type="text" class="span4" placeholder="Card Number">
               <input name="transaction[credit_card][cvv]" type="text" class="span3" placeholder="Security Code">
               <hr>
               <div class="span6" style="margin-left:0px;">
-              <p>Expiration Date</p>
-              <select name="transaction[credit_card][expiration_month]">
-                <option>Month</option>
-                <%= options_for_select((1..12).to_a) %>
-              </select>
-              <select name="transaction[credit_card][expiration_year]">
-                <%= options_for_select(["Year"] + (Time.now.year..Time.now.year+10).to_a) %>
-              </select>
-            </div>
+                <p>Expiration Date</p>
+                <select name="transaction[credit_card][expiration_month]">
+                  <option>Month</option>
+                  <%= options_for_select((1..12).to_a, params[:exp_month].to_i) %>
+                </select>
+                <select name="transaction[credit_card][expiration_year]">
+                  <%= options_for_select((["Year"] + (Time.now.year..Time.now.year+10).to_a), params[:exp_year].to_i) %>
+                </select>
+              </div>
               <div class="pull-right">
                 <table class="table table-bordered">  
                   <tr>
