--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,6 +35,7 @@
         <ul class="nav" id="main-menu-left">
           <li><a href="/admin/users">Users</a></li>
           <li><a id="" href="/admin/sales">Sales</a></li>
+          <li><a id="" href="/admin/pages">Pages</a></li>          
         </ul>
         <ul class="nav pull-right" id="main-menu-right">
           <li><a rel="tooltip" target="_blank" href="/admin/leads">Export Leads</a></li>
