--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MY SALE TABLE</title>
+    <% if @title %>
+      <title> MY SALE TABLE - <%= @title %></title>
+    <% else %>
+      <title>MY SALE TABLE</title>
+    <% end %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content=""> 
