--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,8 +55,8 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="<%= new_sale_url %>"><i class="icon-upload"></i>&#160;Upload</a></li>
-              <li><a href="about.html"><i class="icon-globe"></i>&#160;About</a></li>
-              <li><a href="press.html"><i class="icon-comment"></i>&#160;Badges</a></li>
+              <li><a href="/page/about"><i class="icon-globe"></i>&#160;About</a></li>
+              <li><a href="/page/press"><i class="icon-comment"></i>&#160;Badges</a></li>
               <li><a href="<%= edit_user_url("self") %>"><i class="icon-picture"></i>&#160;Profile</a></li>
             </ul>
           </div><!--/.nav-collapse -->
