--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,7 +1,9 @@
+<% unless @page.slug == "landing" %>
 <style>
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
 </style>
+<% end %>
 
 <%= raw @page.content %>
