--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -5,7 +5,11 @@
 <% end %>
 
 <div class="page-header">
-<h1>All Pages</h1>
+  <h1>All Pages
+  </h1>
+  <br>
+<a class="btn btn-info btn-small" href="<%= new_admin_page_url %>">New Page</a>
+
 </div>
 
 <table class="table table-bordered table-striped table-hover">
@@ -13,7 +17,9 @@
     <tr>
       <th>Slug</th>
       <th>Title</th>
-      <th>Actions</th>
+      <th>
+        Actions
+      </th>
     </tr>
   </thead>
   <tbody>
@@ -32,3 +38,6 @@
   <% end %>
   </tbody>
 </table>
+
+
+
