--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -44,7 +44,7 @@
             <ul class="nav">
               <li><%= link_to "Join", register_url %></li>
               <li><%= link_to "Login", new_session_url %></li>
-              <li><%= link_to "Merchants", merchants_intro_url %></li>
+              <li><%= link_to "Merchants", "/page/merchants-intro"  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
