--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -83,7 +83,7 @@
   top: 0px;
   left: 0px;
   /* and don't display it */
-  display: block;
+  display: none;
   background-color: rgba(102, 102, 102, .8);
   height: 38px;
   width: 100%;
